Change rules views to functions minus scheduled chnages and history views
